// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParticipantForm renders participant form component 1`] = `
<div>
  <h3>
    Event participation form
  </h3>
  <form
    onSubmit={[Function]}
  >
    <TextInputField
      errorMessages={Array []}
      id="name"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
    <ParticipantButton />
  </form>
</div>
`;

exports[`ParticipantForm renders participant form component with completion message 1`] = `
<div>
  <h3>
    Event participation form
  </h3>
  参加登録が完了しました。
  <form
    onSubmit={[Function]}
  >
    <TextInputField
      errorMessages={Array []}
      id="name"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
    <ParticipantButton />
  </form>
</div>
`;

exports[`ParticipantForm renders participant form component with error message 1`] = `
<div>
  <h3>
    Event participation form
  </h3>
  <ul>
    <li>
      名前を入力して下さい
    </li>
  </ul>
  <form
    onSubmit={[Function]}
  >
    <TextInputField
      errorMessages={Array []}
      id="name"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
    <ParticipantButton />
  </form>
</div>
`;
